--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paper Homepage</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/favicon.png" type="image/png">
@@ -9,7 +10,7 @@
 <body>
 
 <header>
-    <h1>Paper Title: <i>Awesome Vision Model</i></h1>
+    <h1>📄 Paper Title: <i>Awesome Vision Model</i></h1>
     <p>Authors: <a href="#">Author1</a>, <a href="#">Author2</a>, <a href="#">Author3</a></p>
 </header>
 
@@ -17,6 +18,19 @@
     <a href="https://github.com/username/repo" target="_blank" class="btn github">🔗 GitHub</a>
     <a href="https://arxiv.org/abs/xxxx.xxxx" target="_blank" class="btn paper">📄 Paper</a>
     <a href="https://demo-link.com" target="_blank" class="btn demo">🚀 Demo</a>
+</section>
+
+<!-- 添加机器人GIF展示区 -->
+<section class="robots">
+    <h2>🤖 Robot Demonstrations</h2>
+    <div class="robot-gallery">
+        <img src="assets/Collect a ping pong ball into the red zone.gif" alt="Robot 1" class="robot-gif">
+        <img src="assets/Open drawer and pick a box.gif" alt="Robot 2" class="robot-gif">
+        <img src="assets/Collect all ping pong balls into the red zone.gif" alt="Robot 3" class="robot-gif">
+        <img src="assets/Give me the ping pong ball.gif" alt="Robot 4" class="robot-gif">
+        <img src="assets/Write something.gif" alt="Robot 5" class="robot-gif">
+        <img src="assets/Give me the bottle and unscrew the cap.gif" alt="Robot 6" class="robot-gif">
+    </div>
 </section>
 
 <section class="content">
