--- a/index.html
+++ b/index.html
@@ -70,15 +70,19 @@
     <p>Our system detects and corrects typical failures via digital twin simulation and error prompts.</p>
     <div class="failure-gallery">
         <div class="failure-item">
-            <img src="assets/failure_occlusion.gif" alt="Failure: Occlusion" class="failure-gif">
+            <img src="assetsfailed/C1.gif" alt="Failure: Occlusion" class="failure-gif">
             <p>Failure: Target Occluded</p>
         </div>
         <div class="failure-item">
-            <img src="assets/failure_order.gif" alt="Failure: Wrong Action Order" class="failure-gif">
+            <img src="assetsfailed/C2.gif" alt="Failure: Wrong Action Order" class="failure-gif">
             <p>Failure: Wrong Action Sequence</p>
         </div>
         <div class="failure-item">
-            <img src="assets/failure_collision.gif" alt="Failure: Collision" class="failure-gif">
+            <img src="assetsfailed/C3.gif" alt="Failure: Collision" class="failure-gif">
+            <p>Failure: Collision Detected</p>
+        </div>
+        <div class="failure-item">
+            <img src="assetsfailed/C4.gif" alt="Failure: Collision" class="failure-gif">
             <p>Failure: Collision Detected</p>
         </div>
     </div>
