--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 <body>
 
 <header>
-    <h1>Paper Title: <i>Awesome Vision Model</i></h1>
-    <p>Authors: <a href="#">Author1</a>, <a href="#">Author2</a>, <a href="#">Author3</a></p>
+    <h1><i>Towards Robust Task Planning: A Spatial Relation Prompt Vision-Language Model Framework</i></h1>
+  <!--    <p>Authors: <a href="#">Author1</a>, <a href="#">Author2</a>, <a href="#">Author3</a></p> -->
 </header>
 
 <section class="links">
     <a href="https://github.com/username/repo" target="_blank" class="btn github">🔗 GitHub</a>
+    <!-- 
     <a href="https://arxiv.org/abs/xxxx.xxxx" target="_blank" class="btn paper">📄 Paper</a>
-    <a href="https://demo-link.com" target="_blank" class="btn demo">🚀 Demo</a>
+   -->
 </section>
 
 <!-- 机器人GIF展示区 -->
@@ -33,7 +34,7 @@
     </div>
 </section>
 
-<!-- 模块化介绍 -->
+<!-- 模块化介绍 
 <section class="modules">
     <h2>Framework Modules</h2>
     <div class="module">
@@ -56,34 +57,34 @@
         <p>The model receives the original spatial prompts, task videos, and error feedback to reconstruct context and fix causal inconsistencies, iteratively refining task plans until successful validation.</p>
     </div>
 </section>
-
-<!-- 结果展示 -->
+-->
+<!-- 结果展示
 <section class="content">
     <h2>Results</h2>
     <img src="assets/demo.png" alt="Demo Image" class="demo-img">
     <p>Our model achieves state-of-the-art performance on XYZ dataset, with 92.1% mAP.</p>
 </section>
-
+ -->
 <!-- 错误演示区 -->
 <section class="failures">
     <h2>Failure Case Demonstrations</h2>
     <p>Our system detects and corrects typical failures via digital twin simulation and error prompts.</p>
     <div class="failure-gallery">
         <div class="failure-item">
-            <img src="assetsfailed/C1.gif" alt="Failure: Occlusion" class="failure-gif">
-            <p>Failure: Target Occluded</p>
+            <img src="assetsfailed/C1.gif" alt="Failure: Pre execution of gripper and re execution failed" class="failure-gif">
+            <p>Failure: Pre execution of gripper and re execution failed</p>
         </div>
         <div class="failure-item">
-            <img src="assetsfailed/C2.gif" alt="Failure: Wrong Action Order" class="failure-gif">
-            <p>Failure: Wrong Action Sequence</p>
+            <img src="assetsfailed/C2.gif" alt="Failure: Abnormal human-computer interaction" class="failure-gif">
+            <p>Failure: Abnormal human-computer interaction</p>
         </div>
         <div class="failure-item">
-            <img src="assetsfailed/C3.gif" alt="Failure: Collision" class="failure-gif">
-            <p>Failure: Collision Detected</p>
+            <img src="assetsfailed/C3.gif" alt="Failure: Inference output oscillation" class="failure-gif">
+            <p>Failure: Inference output oscillation</p>
         </div>
         <div class="failure-item">
-            <img src="assetsfailed/C4.gif" alt="Failure: Collision" class="failure-gif">
-            <p>Failure: Collision Detected</p>
+            <img src="assetsfailed/C4.gif" alt="Failure: Spatial Cognitive Bias" class="failure-gif">
+            <p>Failure: Spatial Cognitive Bias</p>
         </div>
     </div>
 </section>
