--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </header>
 
 <section class="links">
-    <a href="https://https://github.com/trtp/TRTP_1" target="_blank" class="btn github">🔗 GitHub</a>
+    <a href="https://github.com/trtp/TRTP_1" target="_blank" class="btn github">🔗 GitHub</a>
     <!-- 
     <a href="https://arxiv.org/abs/xxxx.xxxx" target="_blank" class="btn paper">📄 Paper</a>
    -->
