--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-    <h1><i>Towards Robust Task Planning: A Spatial Relation Prompt Vision-Language Model Framework</i></h1>
+    <h1><i>TRTP: A Three-Stage Robust Task Planning Framework for Open Worlds via Visual-Language Models and Digital Twin Simulation</i></h1>
   <!--    <p>Authors: <a href="#">Author1</a>, <a href="#">Author2</a>, <a href="#">Author3</a></p> -->
 </header>
 
